--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,8 @@ body {
 }
 
 .menu ul {
-  padding: 0;
+  padding: 0 0 0 20px;
+  margin: 0;
 }
 
 .menu li {
@@ -43,6 +44,28 @@ a:visited {
 }
 
 a:hover {
+  color: #f3974c;
+  text-decoration: none;
+}
+
+.menu {
+  width: calc(100% + 40px);
+  margin-left: -20px;
+  background: #0c0ca2;
+  line-height: 50px;
+}
+
+.btnLink {
+  cursor: pointer;
+  font-size: 16px;
+  font-weight: bold;
+  background: transparent;
+  color: #ff7300;
+  border: none;
+  text-decoration: underline;
+}
+
+.btnLink:hover {
   color: #f3974c;
   text-decoration: none;
 }
